[project]
name = "fiverr"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.128.8",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 88
lint.select = ["ALL"]

lint.ignore = [
    "E501",  # line too long (handled by line-length)
    "D107",  # missing docstring in __init__
    "D104",  # missing docstring in package
    "D", # missing docstring in public modules, classes, functions, and methods
]
# select = [
#     "E",  # pycodestyle errors
#     "W",  # pycodestyle warnings
#     "F",  # pyflakes
#     "I",  # isort
#     "B",  # flake8-bugbear
#     "C4", # flake8-comprehensions
#     "UP", # pyupgrade
#     "S",  # bandit
#     "C",  # complexity
#     "D",  # pydocstyle
#     "FAST", # fastapi-specific linting
# ]

fix = true


[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # ignore unused imports in __init__.py files

[tool.uv.workspace]
members = [
    "backend",
]
